--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,9 @@ Changelog
 0.1 - Unreleased
 ----------------
 
+- Styled Notice Viewlet.
+  [Vitaliy Podoba]
+
 - Ajaxified hide notice action.
   [Vitaliy Podoba]
 
