show state of the notice in the management view, highlight inactive ones red

--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -9,6 +9,7 @@ Unreleased
 - Improved markup for hide link: Added a descriptive text and allow to define
   an icon via CSS) [fRiSI]
 
+- Indicate inactive notices in the management view [fRiSi]
 
 1.0 - April 9, 2014
 -------------------
